<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/searchName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/search_pic_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:hint="@string/search_name_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/startDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_startDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <DatePicker
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/endDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_endDate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <DatePicker
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Search" />

</LinearLayout>