<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/RelativeLayout01" 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	>


    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--<ListView-->
        <!--android:id="@+id/pictureListView"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="0.50" >-->
    <!--</ListView>-->


      <GridView
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/viewAlbumGridView"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:columnWidth="90dp"
          android:gravity="center"
          android:horizontalSpacing="10dp"
          android:numColumns="auto_fit"
          android:stretchMode="columnWidth"
          android:verticalSpacing="10dp"
          android:layout_above="@+id/LinearLayout01"
			android:layout_below="@+id/albumTitle" >
      </GridView>


    <LinearLayout
        android:id="@+id/LinearLayout01" 
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent" 
	    android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/editAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="bottom"
            android:text="@string/button_edit_album" />

        <Button
            android:id="@+id/comparePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
<<<<<<< HEAD
            android:gravity="bottom"
=======
            android:text="@string/button_take_pic" />

    </LinearLayout>
    
    <Button
            android:id="@+id/comparePic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
>>>>>>> 426fe2ff8ce52c02b2b5fbe5bd3d292640331f77
            android:text="@string/button_compare_pic" />

        <Button
            android:id="@+id/takePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:gravity="bottom"
            android:text="@string/button_take_pic" />
    </LinearLayout>
	
</RelativeLayout>